--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viva l'Italia</title>
 
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!-- <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> -->
+    <script src="vue_3_global.js"></script>
     <link rel="stylesheet" href="style.css">
 
 
@@ -14,6 +15,11 @@
 <body>
 
     <div id="app"></div>
+    <script src="words.js"></script>
+    <script src="test.js"></script>
+    <script src="utils.js"></script>
+    <script src="wordcard.js"></script>
+    <script src="wordrow.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
