--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 </head>
 <body>
 
+    <script>
+        const SEARCH_PARAMS = new URLSearchParams(location.search);
+    </script>
+
     <div id="app"></div>
     <script src="words.js"></script>
     <script src="test.js"></script>
