fixed words saving

--- a/index_local.html
+++ b/index_local.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viva l'Italia</title>
 
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!-- <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> -->
+    <script src="vue_3_global.js"></script>
     <link rel="stylesheet" href="style.css">
 
 
