final polishes for prod

--- a/index_local.html
+++ b/index_local.html
@@ -8,6 +8,7 @@
 
     <!-- <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> -->
     <script src="vue_3_global.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
 
 
