--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Viva l'Italia</title>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
 
 
